--- a/index.css
+++ b/index.css
@@ -26,8 +26,8 @@ body {
     --gold-500: hsl(31, 77%, 52%);
     --cyan-800: hsl(184, 100%, 22%);
     --green-950: hsl(179, 100%, 13%);
-    --transparent-white: hsla(0, 0%, 100%, 0.75); /* paragraphs */
-    --gray-100: hsl(0, 0%, 95%); /* background, headings, buttons */
+    --transparent-white: hsla(0, 0%, 100%, 0.75); 
+    --gray-100: hsl(0, 0%, 95%);
 }
 
 main {
